--- a/EDA_of_Black_Friday_Dataset.ipynb
+++ b/EDA_of_Black_Friday_Dataset.ipynb
@@ -9,7 +9,7 @@
         "0QvRwJ_i3fpX"
       ],
       "mount_file_id": "1zMsddzD8Pzl9OpxGwu4Uzxopeo0ixR77",
-      "authorship_tag": "ABX9TyOsVggsTNgDCMlyuQjA8f1+",
+      "authorship_tag": "ABX9TyNO1abBEytt7jMRgxGL5TnM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,9 +36,7 @@
       "source": [
         "# **Problem Statement**\n",
         "A retail company “ABC Private Limited” wants to understand the customer purchase behaviour (specifically, purchase amount) against various products of different categories. They have shared purchase summary of various customers for selected high volume products from last month.\n",
-        "The data set also contains customer demographics (age, gender, marital status, city_type, stay_in_current_city), product details (product_id and product category) and Total purchase_amount from last month.\n",
-        "\n",
-        "Now, they want to build a model to predict the purchase amount of customer against various products which will help them to create personalized offer for customers against different products."
+        "The data set also contains customer demographics (age, gender, marital status, city_type, stay_in_current_city), product details (product_id and product category) and Total purchase_amount from last month.\n"
       ],
       "metadata": {
         "id": "crCYHXjOHQgt"
