--- a/EDA_of_Black_Friday_Dataset.ipynb
+++ b/EDA_of_Black_Friday_Dataset.ipynb
@@ -9,7 +9,7 @@
         "0QvRwJ_i3fpX"
       ],
       "mount_file_id": "1zMsddzD8Pzl9OpxGwu4Uzxopeo0ixR77",
-      "authorship_tag": "ABX9TyNO1abBEytt7jMRgxGL5TnM",
+      "authorship_tag": "ABX9TyPL2KPJmr5lPsQX/8UnFMWf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/RAHULRAJ666DX/EDA_of_Black_Friday_Dataset/blob/main/EDA_of_Black_Friday_Dataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Black Friday Dataset Kaggle"
+      ],
+      "metadata": {
+        "id": "NyAn6KtZ2HQc"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4155,7 +4164,7 @@
     {
       "cell_type": "code",
       "source": [
-        "##Feature Scaling \n",
+        "##Feature Scaling\n",
         "df_test=df[df['Purchase'].isnull()]\n",
         "df_test"
       ],
